argocd/manifests/docs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: docs
spec:
  selector:
    app: docs
  ports:
    - name: http
      port: 80
      targetPort: 80
